# SPTAG

./: .gitignore  .gitmodules  AnnService.users.props  CMakeLists.txt  Dockerfile  Dockerfile.cuda  MANIFEST.in  README.md  SPTAG.WinRT.nuspec  SPTAG.nuspec  SPTAG.sln  SPTAG.targets  azure-pipelines.yml  bdev.json  install.sh  setup.py  setup.txt  sgKey.snk
AnnService/: Aggregator.vcxproj  Aggregator.vcxproj.filters  BalancedDataPartition.vcxproj  BalancedDataPartition.vcxproj.filters  CMakeLists.txt  Client.vcxproj  Client.vcxproj.filters  CoreLibrary.vcxproj  CoreLibrary.vcxproj.filters  DistanceBench.filters  DistanceBench.vcxproj  GPUCoreLibrary.vcxproj  GPUCoreLibrary.vcxproj.filters  GPUIndexBuilder.vcxproj  GPUIndexBuilder.vcxproj.filters  GPUQuantizer.vcxproj  GPUQuantizer.vcxproj.filters  GPUSSDServing.vcxproj  GPUSSDServing.vcxproj.diegotest.nvuser  GPUSSDServing.vcxproj.filters  IndexBuilder.vcxproj  IndexBuilder.vcxproj.filters  IndexSearcher.vcxproj  Quantizer.vcxproj  Quantizer.vcxproj.filters  SSDServing.vcxproj  SSDServing.vcxproj.filters  Server.vcxproj  Server.vcxproj.filters  SocketLib.vcxproj  SocketLib.vcxproj.filters  packages.config
AnnService/inc/Aggregator/: AggregatorContext.h  AggregatorExecutionContext.h  AggregatorService.h  AggregatorSettings.h
AnnService/inc/Client/: ClientWrapper.h  Options.h
AnnService/inc/Core/: Common.h  CommonDataStructure.h  DefinitionList.h  MetadataSet.h  MultiIndexScan.h  ResultIterator.h  SPANNResultIterator.h  SearchQuery.h  SearchResult.h  VectorIndex.h  VectorSet.h
AnnService/inc/Core/BKT/: CommonUtils.h  DataUtils.h  Dataset.h  DistanceUtils.h  Heap.h  Index.h  ParameterDefinitionList.h  QueryResultSet.h  WorkSpace.h  WorkSpacePool.h
AnnService/inc/Core/Common/: BKTree.h  CommonUtils.h  ConcurrentSet.h  DataUtils.h  Dataset.h  DistanceUtils.h  FineGrainedLock.h  Heap.h  IQuantizer.h  InstructionUtils.h  KDTree.h  KNearestNeighborhoodGraph.h  Labelset.h  NeighborhoodGraph.h  OPQQuantizer.h  OptimizedDataset.h  PQQuantizer.h  PostingSizeRecord.h  Quantizer.h  QueryResultSet.h  RelativeNeighborhoodGraph.h  SIMDUtils.h  TruthSet.h  VersionLabel.h  WAL.h  WorkSpace.h  WorkSpacePool.h  malloc_aligned.hpp
AnnService/inc/Core/DiskANN/: Index.h  ParameterDefinitionList.h
AnnService/inc/Core/KDT/: Index.h  ParameterDefinitionList.h
AnnService/inc/Core/SPANN/: Compressor.h  ExtraDynamicSearcher.h  ExtraFullGraphSearcher.h  ExtraRocksDBController.h  ExtraSPDKController.h  ExtraStaticSearcher.h  IExtraSearcher.h  Index.h  (+4 more)
AnnService/inc/Helper/: ArgumentsParser.h  AsyncFileReader.h  Base64Encode.h  BufferStream.h  CommonHelper.h  Concurrent.h  ConcurrentSet.h  DiskIO.h  DynamicNeighbors.h  KeyValueIO.h  LockFree.h  Logging.h  SimpleIniReader.h  StringConvert.h  ThreadPool.h  VectorSetReader.h
AnnService/inc/IndexBuilder/: Options.h  ThreadPool.h  VectorSetReader.h
AnnService/inc/Quantizer/: OPQUpdate.hxx  Training.h  cusolver_utils.h
AnnService/inc/SPFresh/: SPFresh.h
AnnService/inc/SSDServing/: SSDIndex.h  SelectHead.h  Utils.h  main.h
AnnService/inc/Server/: QueryParser.h  SearchExecutionContext.h  SearchExecutor.h  SearchService.h  ServiceContext.h  ServiceSettings.h
AnnService/inc/Socket/: Client.h  Common.h  Connection.h  ConnectionManager.h  Packet.h  RemoteSearchQuery.h  ResourceManager.h  Server.h  SimpleSerialization.h
AnnService/src/Aggregator/: AggregatorContext.cpp  AggregatorExecutionContext.cpp  AggregatorService.cpp  AggregatorSettings.cpp  main.cpp
AnnService/src/BalancedDataPartition/: main.cpp
AnnService/src/Client/: ClientWrapper.cpp  Options.cpp  main.cpp
AnnService/src/Core/: Common.cpp  CommonDataStructure.cpp  MetadataSet.cpp  MultiIndexScan.cpp  ResultIterator.cpp  SPANNResultIterator.cpp  VectorIndex.cpp  VectorSet.cpp
AnnService/src/DistanceBench/: main.cpp
AnnService/src/Helper/: ArgumentsParser.cpp  AsyncFileReader.cpp  Base64Encode.cpp  CommonHelper.cpp  Concurrent.cpp  DiskIO.cpp  DynamicNeighbors.cpp  SimpleIniReader.cpp  VectorSetReader.cpp
AnnService/src/IndexBuilder/: Options.cpp  ThreadPool.cpp  VectorSetReader.cpp  main.cpp
AnnService/src/IndexSearcher/: main.cpp
AnnService/src/Quantizer/: OPQUpdate.cu  main.cpp
AnnService/src/SPFresh/: main.cpp
AnnService/src/SSDServing/: main.cpp
AnnService/src/Server/: QueryParser.cpp  SearchExecutionContext.cpp  SearchExecutor.cpp  SearchService.cpp  ServiceContext.cpp  ServiceSettings.cpp  main.cpp
AnnService/src/Socket/: Client.cpp  Common.cpp  Connection.cpp  ConnectionManager.cpp  Packet.cpp  RemoteSearchQuery.cpp  Server.cpp
AnnService/x64/Debug/: SSDServing.exe.recipe
GPUSupport/: CMakeLists.txt
PythonWrapper/: CMakeLists.txt  PythonClient.vcxproj  PythonClient.vcxproj.filters  PythonCore.vcxproj  PythonCore.vcxproj.filters
PythonWrapper/inc/: ClientInterface.h  CoreInterface.h  PyByteArray.i  TransferDataType.h
PythonWrapper/src/: ClientInterface.cpp  CoreInterface.cpp
Search/: CMakeLists.txt  Search.vcxproj  Search.vcxproj.filters  main.cpp
Test/: CMakeLists.txt  ReconstructIndexSimilarityTest.cpp  Test.vcxproj  Test.vcxproj.filters  make_gist_sptag.py  make_quantizer_tests.py  packages.config  test_truth_sdc.L2
Test/WinRTTest/: WinRTTest.cpp  WinRTTest.vcxproj  WinRTTest.vcxproj.filters  packages.config
Test/cuda/: buildssd_test.cu  common.hxx  cuda_tests.cpp  distance_tests.cu  gpu_pq_perf.cu  knn_tests.cu  pq_perf.cpp  random_tests.cu  tptree_tests.cu
Test/inc/: BKTTest.h  DistanceTest.h  Test.h
Test/res/: testvectors-quantized.txt  vector-distances-quantized.txt
Test/src/: ADCTest.cpp  AlgoTest.cpp  BKTTest.cpp  Base64HelperTest.cpp  CommonHelperTest.cpp  ConcurrentTest.cpp  DistanceTest.cpp  FilterTest.cpp  IniReaderTest.cpp  IterativeScanTest.cpp  KVTest.cpp  MultiIndexExperiment.cpp  MultiIndexScanTest.cpp  PerfTest.cpp  QuantizationTest.cpp  ReconstructIndexSimilarityTest.cpp  SDCTest.cpp  SIMDTest.cpp  SSDServingTest.cpp  StringConvertTest.cpp  main.cpp
Test/testindices/: indexloader.ini
Test/testindices-adc/: indexloader.ini
Test/testindices-sdc/: indexloader.ini
(+193 files in other folders)
